<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/promotionView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingVertical="@dimen/spacing_large"
                android:paddingHorizontal="@dimen/spacing_large"
                android:background="?colorTertiaryContainer"
                android:visibility="gone"
                tools:visibility="visible">

                <ImageView
                    android:id="@+id/promotionIcon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_discount_24dp"
                    app:tint="?colorOnTertiaryContainer"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"/>

                <TextView
                    android:id="@+id/promotionTitleView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toEndOf="@id/promotionIcon"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginStart="@dimen/spacing_large"
                    android:textAppearance="?textAppearanceSubtitle1"
                    android:fontFamily="sans-serif-medium"
                    android:textColor="?colorOnTertiaryContainer"
                    tools:text="Buy 1, Get 1 Free on this item!"/>

                <TextView
                    android:id="@+id/promotionDescriptionView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/promotionTitleView"
                    app:layout_constraintStart_toEndOf="@id/promotionIcon"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginStart="@dimen/spacing_large"
                    android:textAppearance="?textAppearanceBody2"
                    android:textColor="?colorTertiary"
                    tools:text="When you buy a minimum of 2 items"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/productDescriptionView"
                android:textAppearance="?textAppearanceBody1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lineSpacingMultiplier="1.3"
                android:layout_marginHorizontal="@dimen/spacing_large"
                android:layout_marginVertical="@dimen/spacing_large"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@id/promotionView"
                app:layout_constraintBottom_toBottomOf="parent"
                tools:layout_editor_absoluteX="16dp"
                android:text="@string/lorem_ipsum" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?colorSurface"
        android:fitsSystemWindows="true"
        app:liftOnScroll="true">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsingToolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:contentScrim="?colorPrimaryContainer">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/productImage"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:scaleType="centerCrop"
                    android:contentDescription="@string/product_item_image_cd"
                    android:foreground="@drawable/product_image_scrim"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintDimensionRatio="@string/product_image_aspect_ratio"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:background="@color/image_placeholder"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <!-- Toolbar needs to be on top for the back button to be tappable -->
            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?actionBarSize"
                app:layout_collapseMode="pin"
                app:navigationIcon="@drawable/ic_arrow_back_24"
                app:navigationIconTint="?colorOnPrimaryContainer"
                app:layout_behavior="@string/appbar_scrolling_view_behavior" />

        </com.google.android.material.appbar.CollapsingToolbarLayout>

        <LinearLayout
            android:id="@+id/productInfoView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingVertical="@dimen/spacing_large"
            android:paddingHorizontal="@dimen/spacing_large"
            android:background="?colorPrimaryContainer"
            app:layout_constraintTop_toBottomOf="@id/productImage">

            <TextView
                android:id="@+id/productTitleView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?textAppearanceHeadline6"
                android:textColor="?colorOnPrimaryContainer"
                tools:text="Product Title"/>

            <TextView
                android:id="@+id/productPriceView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?textAppearanceSubtitle2"
                android:textColor="?colorPrimary"
                tools:text="$100.00"/>

        </LinearLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/addToCartButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/spacing_large"
        android:layout_marginBottom="@dimen/spacing_large"
        android:layout_gravity="bottom|end"
        app:icon="@drawable/ic_add_shopping_cart_24"
        android:text="@string/product_detail_fab_add_to_cart_no_items"
        android:contentDescription="@string/product_detail_add_to_cart_cd" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>
